--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="donate">
         <h1 class="donate-h1">Donate Today</h1>
-        <p class="donate-p">We accept all types of payment options.</p>
+        <p class="donate-p">We accept all types of payment options</p>
         <div class="donate-button">
             <a class="button-decoration" target="_blank" href="https://assunnahfoundation.org/">100tk</a>
             <a class="button-decoration" id="two" target="_blank" href="https://assunnahfoundation.org/">200tk</a>
@@ -37,15 +37,18 @@
             <a class="button-decoration" target="_blank" href="https://assunnahfoundation.org/">1000tk</a>
             <a class="button-decoration" target="_blank" href="https://assunnahfoundation.org/">5000tk</a>
         </div>
-
-        <input class="input" type="Other Amount (Taka)">
+        <input class="input" type="number" placeholder="Other Amount (Taka)">
         <br>
         <br>
         <br>
         <a class="button" target="_blank" href="https://assunnahfoundation.org/">Donate Now</a>
     </section>
 
-    <p>duefhglekisahekifhskjghsklhfdklhfvkjdghskfhsighskfhdjkshgvdfhdejghdjghjdgh</p>
+
+    <section>
+        <h1>Our Donate Plan</h1>
+        <p>We donate to the poor, orphan, day labourer, sick people, and many others</p>
+    </section>
 </body>
 
 </html>
