donate plan added

--- a/index.html
+++ b/index.html
@@ -45,10 +45,31 @@
     </section>
 
 
-    <section>
-        <h1>Our Donate Plan</h1>
-        <p>We donate to the poor, orphan, day labourer, sick people, and many others</p>
+    <section class="donate-plan">
+        <h1 id="donate-plan-h1">Our Donate Plan</h1>
+        <p id="donate-plan-p">We donate to the poor, orphan, day labourer, sick people, and many others</p>
+        <div class="flexible-container">
+            <div class="food">
+                <img src="icons/food.png" alt="">
+                <h2>Food for Family</h2>
+                <p>We donate foods for family who are poor, orphan, day labourer, sick people, and many others. they are
+                    stirving for food and water day by day. They really need help and foods</p>
+            </div>
+            <div class="shelter">
+                <img src="icons/shelter.png" alt="">
+                <h2>Shelter for Family</h2>
+                <p>We donate shelter for family who are poor, orphan, day labourer, sick people, and many others. they
+                    are stirving for food and water day by day. They really need help and shelter</p>
+            </div>
+            <div class="education">
+                <img src="icons/Frame-1.png" alt="">
+                <h2>Education for Family</h2>
+                <p>We help to give proper education for family who are poor, orphan, day labourer, sick people, and many
+                    others. they are stirving for food and water day by day. They really need help and education</p>
+            </div>
+        </div>
     </section>
+    <br><br><br><br><br><br><br><br>
 </body>
 
 </html>
