extra one added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,28 @@
             </div>
         </div>
     </section>
+
+
+
+    <section class="extra-one">
+        <div class="ex-one">
+            <div class="half-width">
+                <h1 id="ex-one-h1">Their Lives Depends on Your Donation</h1>
+                <p id="ex-one-p">They are very poor. If you do not donate, how they will lead their lives. for this
+                    reason, you should
+                    donate as much as you can. it will be very good for them as well.They are very poor. <br> If you do
+                    not
+                    donate, how they will lead their lives. for this reason, you should donate as much as you can. it
+                    will
+                    be very good for them as well</p>
+                <a class="button" id="ex-one-button" target="_blank" href="https://assunnahfoundation.org/">How to
+                    Contribute?</a>
+            </div>
+            <div class="half-width">
+                <img src="images/donation10.jpg" alt="">
+            </div>
+        </div>
+    </section>
     <br><br><br><br><br><br><br><br>
 </body>
 
