--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a class="button-decoration" target="_blank" href="https://assunnahfoundation.org/">1000tk</a>
             <a class="button-decoration" target="_blank" href="https://assunnahfoundation.org/">5000tk</a>
         </div>
-        <input class="input" type="number" placeholder="Other Amount (Taka)">
+        <input class="donate-input" type="number" placeholder="Other Amount (Taka)">
         <br>
         <br>
         <br>
@@ -91,7 +91,83 @@
             </div>
         </div>
     </section>
-    <br><br><br><br><br><br><br><br>
+
+
+
+    <section class="extra-two">
+        <div class="ex-two">
+            <div class="half-width" id="half-width-img">
+                <img src="images/donation9.jpg" alt="">
+            </div>
+            <div id="ex-two-text" class="half-width">
+                <h1 id="ex-two-h1">They need us to Survive</h1>
+                <p id="ex-two-p">They are very poor. If you do not donate, how they will lead their lives. for this
+                    reason, you should
+                    donate as much as you can. it will be very good for them as well.They are very poor. <br> If you do
+                    not
+                    donate, how they will lead their lives. for this reason, you should donate as much as you can. it
+                    will
+                    be very good for them as well</p>
+                <a class="button" id="ex-two-button" target="_blank" href="https://assunnahfoundation.org/">How to
+                    Contribute?</a>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="previous">
+        <div id="">
+            <h1 class="previous-h1">Our Previous Works</h1>
+            <p class="previous-p">We did lot of donation programs all over the bangladesh.</p>
+        </div>
+        <div class="previous-work">
+            <div class="p-one">
+                <p>We did this at Dhaka. All of the heaviest duties are done by our team members. they were unstoppable,
+                    they were extraordinary person. they did their job with their best</p><br>
+                <a class="button" target="_blank" href="https://assunnahfoundation.org/">See More</a>
+            </div>
+            <div class="p-two">
+                <p>We did this at Sylhet. All of the heaviest duties are done by our team members. they were
+                    unstoppable,
+                    they were extraordinary person. they did their job with their best</p><br>
+                <a class="button" target="_blank" href="https://assunnahfoundation.org/">See More</a>
+            </div>
+            <div class="p-three">
+                <p>We did this at Rajbari. All of the heaviest duties are done by our team members. they were
+                    unstoppable,
+                    they were extraordinary person. they did their job with their best</p><br>
+                <a class="button" target="_blank" href="https://assunnahfoundation.org/">See More</a>
+            </div>
+            <div class="p-four">
+                <p>We did this at Khulna. All of the heaviest duties are done by our team members. they were
+                    unstoppable,
+                    they were extraordinary person. they did their job with their best</p><br>
+                <a class="button" target="_blank" href="https://assunnahfoundation.org/">See More</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="update">
+        <h1 class="update-h1">Get Our Updates</h1>
+        <p class="update-p">They are very poor. If you do not donate, how they will lead their lives. for this
+            reason, you should
+            donate as much as you can. <br> it will be very good for them as well.They are very poor.
+        </p>
+        <div class="up-bg">
+            <div class="up">
+                <input class="update-input" type="email" placeholder="Email" name="email" id="email">
+                <a class="button" target="_blank" href="https://assunnahfoundation.org/">Subscribe</a>
+            </div>
+        </div>
+
+    </section>
 </body>
+<footer>
+    <h3 class="foot-h3">Be Humble</h3>
+    <p class="foot-p">I'm gonna do it</p>
+</footer>
 
 </html>
